<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LawyerApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="manageclients">Manage Clients</string>
    <string name="managehearings">Manage Hearings</string>
    <string name="accountsettings">Account Settings</string>
    <string name="title_activity_screen2_1">Manage Clients</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_screen2">Add New Client Details </string>
    <string name="title_activity_screen3">Manage Hearings</string>
    <string name="title_activity_screen5">Account Settings</string>
    <string name="clientname">Client Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="title_activity_client_item">Client_item</string>
    <string name="title_activity_screen2_2">Update Client Details</string>
    <string name="delete">Delete</string>
    <string name="title_activity_screen4">Manage Hearings</string>
    <string name="caseno">Case Number</string>
    <string name="casedetails">Case Details</string>
    <string name="nexthearingdate">Next Hearing Date</string>
    <string name="last">|&lt;</string>
    <string name="first">>|</string>
    <string name="next">></string>
    <string name="previous">&lt;</string>
    <string name="edit">Edit</string>
    <string name="title_activity_screen4_1">Update Hearing Details</string>
    <string name="lawyerpersonaldetails">Lawyer Personal Details</string>
    <string name="smsalert">Self SMS Alert</string>
    <string name="lawyername">Lawyer Name</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
