<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Screen5" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:text="@string/lawyerpersonaldetails"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Mobilenumbertext"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="96dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/mobilenumber"
        android:inputType="phone"
        android:textColorHint="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/LawyernameText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="14dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/lawyername"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/Mobilenumbertext"
        android:layout_below="@+id/Mobilenumbertext"
        android:layout_marginTop="30dp"
        android:text="@string/smsalert"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <RadioButton
        android:id="@+id/noradio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/saveSMS"
        android:layout_alignLeft="@+id/textView2"
        android:checked="true"
        android:onClick="setBoolZero"
        android:text="@string/no"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/yesradio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="33dp"
        android:layout_toRightOf="@+id/noradio"
        android:onClick="setBoolOne"
        android:text="@string/yes"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/saveSMS"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/noradio"
        android:layout_below="@+id/yesradio"
        android:layout_marginTop="18dp"
        android:background="@android:color/holo_red_dark"
        android:onClick="saveMobileNum"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>