<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:onClick="cancelBackToScreen2_1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Screen2" >

    <EditText
        android:id="@+id/clientname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="34dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/clientname"
        android:textColorHint="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/clientname"
        android:layout_below="@+id/clientname"
        android:layout_marginTop="29dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/email"
        android:layout_centerVertical="true"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/savebutton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/phone"
        android:layout_below="@+id/phone"
        android:layout_marginTop="45dp"
        android:background="@android:color/holo_red_dark"
        android:onClick="savenewContact"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/cancelbutton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/savebutton"
        android:layout_alignBottom="@+id/savebutton"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/savebutton"
        android:background="@android:color/holo_red_dark"
        android:onClick="cancelBackToScreen2_1"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>
