<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Screen4" >

    <Button
        android:id="@+id/gobacktomainmenu"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/addnewhearings"
        android:layout_alignBottom="@+id/addnewhearings"
        android:layout_alignRight="@+id/hearingdate"
        android:background="@android:color/holo_red_dark"
        android:onClick="goBacktoScreen3"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/casedetails"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_above="@+id/hearingdate"
        android:layout_alignLeft="@+id/caseno"
        android:layout_marginBottom="10dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/casedetails"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:textColorHint="@android:color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/caseno"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_above="@+id/casedetails"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/caseno"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/mylist1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/caseno"
        android:layout_alignLeft="@+id/addnewhearings"
        android:layout_alignParentTop="true" >

    </ListView>

    <Button
        android:id="@+id/addnewhearings"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_red_dark"
        android:onClick="insertNewHearing"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/hearingdate"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_above="@+id/gobacktomainmenu"
        android:layout_alignLeft="@+id/casedetails"
        android:layout_marginBottom="24dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/nexthearingdate"
        android:inputType="date"
        android:textColorHint="@android:color/black"
        android:textStyle="bold" >

        <requestFocus />
    </EditText>

</RelativeLayout>
